; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/common/extr_dmextern.c_AcpiDmClearExternalFileList.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/common/extr_dmextern.c_AcpiDmClearExternalFileList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_4__*, %struct.TYPE_4__* }

@AcpiGbl_ExternalFileList = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AcpiDmClearExternalFileList() #0 {
  %1 = alloca %struct.TYPE_4__*, align 8
  br label %2

2:                                                ; preds = %5, %0
  %3 = load %struct.TYPE_4__*, %struct.TYPE_4__** @AcpiGbl_ExternalFileList, align 8
  %4 = icmp ne %struct.TYPE_4__* %3, null
  br i1 %4, label %5, label %16

5:                                                ; preds = %2
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** @AcpiGbl_ExternalFileList, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 1
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  store %struct.TYPE_4__* %8, %struct.TYPE_4__** %1, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** @AcpiGbl_ExternalFileList, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %12 = call i32 @ACPI_FREE(%struct.TYPE_4__* %11)
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** @AcpiGbl_ExternalFileList, align 8
  %14 = call i32 @ACPI_FREE(%struct.TYPE_4__* %13)
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  store %struct.TYPE_4__* %15, %struct.TYPE_4__** @AcpiGbl_ExternalFileList, align 8
  br label %2

16:                                               ; preds = %2
  ret void
}

declare dso_local i32 @ACPI_FREE(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
